crates/lang/macro/tests/ui/contract/fail/C-15-payable-trait-constructor.stderr
error: encountered conflicting ink! attribute argument
  --> $DIR/C-15-payable-trait-constructor.rs:15:28
   |
15 |         #[ink(constructor, payable)]
   |                            ^^^^^^^

error: constructors are implicitly payable
  --> $DIR/C-15-payable-trait-constructor.rs:15:28
   |
15 |         #[ink(constructor, payable)]
   |                            ^^^^^^^
